--- a/SH09_s_id/knowledge/sections/Model_description.tex
+++ b/SH09_s_id/knowledge/sections/Model_description.tex
@@ -1,37 +1,39 @@
 \section{Model description}
 
+\subsection{F-16 model}
+
 \subsection{Model forces and moments coefficients}
-$\mat{F}$ matrix
-Forces: 
-$$
-X_u, X_v, X_w, X_p, X_q, X_r \\
-Y_u, Y_v, Y_w, Y_p, Y_q, Y_r \\
-Z_u, Z_v, Z_w, Z_p, Z_q, Z_r
-$$
+  $\mat{F}$ matrix
+  Forces: 
+  $$
+  X_u, X_v, X_w, X_p, X_q, X_r \\
+  Y_u, Y_v, Y_w, Y_p, Y_q, Y_r \\
+  Z_u, Z_v, Z_w, Z_p, Z_q, Z_r
+  $$
 
-Moments:
-$$
-L_u, L_v, L_w, L_p, L_q, L_r \\
-M_u, M_v, M_w, M_p, M_q, M_r \\
-N_u, N_v, N_w, N_p, N_q, N_r
-$$
+  Moments:
+  $$
+  L_u, L_v, L_w, L_p, L_q, L_r \\
+  M_u, M_v, M_w, M_p, M_q, M_r \\
+  N_u, N_v, N_w, N_p, N_q, N_r
+  $$
 
-Controllability, $\mat{G}$ matrix:
-Forces
-$$
-X_{\delta_{\mathrm{lon}}}, X_{\delta_{\mathrm{lat}}}, X_{\delta_{\mathrm{ped}}}, X_{\delta_{\mathrm{col}}} \\
-Y_{\delta_{\mathrm{lon}}}, Y_{\delta_{\mathrm{lat}}}, Y_{\delta_{\mathrm{ped}}}, Y_{\delta_{\mathrm{col}}} \\
-Z_{\delta_{\mathrm{lon}}}, Z_{\delta_{\mathrm{lat}}}, Z_{\delta_{\mathrm{ped}}}, Z_{\delta_{\mathrm{col}}}
-$$
+  Controllability, $\mat{G}$ matrix:
+  Forces
+  $$
+  X_{\delta_{\mathrm{lon}}}, X_{\delta_{\mathrm{lat}}}, X_{\delta_{\mathrm{ped}}}, X_{\delta_{\mathrm{col}}} \\
+  Y_{\delta_{\mathrm{lon}}}, Y_{\delta_{\mathrm{lat}}}, Y_{\delta_{\mathrm{ped}}}, Y_{\delta_{\mathrm{col}}} \\
+  Z_{\delta_{\mathrm{lon}}}, Z_{\delta_{\mathrm{lat}}}, Z_{\delta_{\mathrm{ped}}}, Z_{\delta_{\mathrm{col}}}
+  $$
 
-Moments
-$$
-M_{\delta_{\mathrm{lon}}}, M_{\delta_{\mathrm{lat}}}, M_{\delta_{\mathrm{ped}}}, M_{\delta_{\mathrm{col}}} \\
-N_{\delta_{\mathrm{lon}}}, N_{\delta_{\mathrm{lat}}}, N_{\delta_{\mathrm{ped}}}, N_{\delta_{\mathrm{col}}} \\
-N_{\delta_{\mathrm{lon}}}, N_{\delta_{\mathrm{lat}}}, N_{\delta_{\mathrm{ped}}}, N_{\delta_{\mathrm{col}}}
-$$
+  Moments
+  $$
+  M_{\delta_{\mathrm{lon}}}, M_{\delta_{\mathrm{lat}}}, M_{\delta_{\mathrm{ped}}}, M_{\delta_{\mathrm{col}}} \\
+  N_{\delta_{\mathrm{lon}}}, N_{\delta_{\mathrm{lat}}}, N_{\delta_{\mathrm{ped}}}, N_{\delta_{\mathrm{col}}} \\
+  N_{\delta_{\mathrm{lon}}}, N_{\delta_{\mathrm{lat}}}, N_{\delta_{\mathrm{ped}}}, N_{\delta_{\mathrm{col}}}
+  $$
 
-Time delays
-$$
-\tau_{\mathrm{lon}}, \tau_{\mathrm{lat}}, \tau_{\mathrm{ped}}, \tau_{\mathrm{col}}
-$$
+  Time delays
+  $$
+  \tau_{\mathrm{lon}}, \tau_{\mathrm{lat}}, \tau_{\mathrm{ped}}, \tau_{\mathrm{col}}
+  $$
