--- a/SH09_s_id/knowledge/settings/doc_settings.tex
+++ b/SH09_s_id/knowledge/settings/doc_settings.tex
@@ -23,6 +23,7 @@
 \newcommand{\nomunit}[1]{\renewcommand{\nomentryend}{\hspace*{\fill}[#1]}}
 \newcommand{\mat}[1]{\mathrm{\textbf{#1}}}
 \newcommand{\notcien}[2]{$#1\times10^{#2}$}
+\newcommand{\msub}[2]{#1_{\mathrm{#2}}}
 
 \renewcommand{\nomgroup}[1]{%
  \ifthenelse{\equal{#1}{A}}{\item[]}{% For roman letters
