small changes documents

--- a/SH09_s_id/knowledge/sections/0.Nomenclature.tex
+++ b/SH09_s_id/knowledge/sections/0.Nomenclature.tex
@@ -9,3 +9,7 @@
 % 
 %Aero
 \nomenclature[b]{$\alpha$}{Angle of attack \nomunit{deg}}
+
+%Abbreviations
+\nomenclature[c]{$CAS$}{Control Augmentation System}
+\nomenclature[c]{$CSAS$}{Control and Stability Augmentation System}
