Changes to knowledge latex

--- a/SH09_s_id/knowledge/MyBib.bib
+++ b/SH09_s_id/knowledge/MyBib.bib
@@ -24,3 +24,13 @@ file = {:C$\backslash$:/Users/valverdea/Documents/Mendeley/Morelli - 2011 - Airc
 title = {{Aircraft System Identification}},
 year = {2011}
 }
+@book{Cooke,
+author = {{Cooke, A. K.}, Fitzpatrick E. W. H.},
+file = {:D$\backslash$:/Mendeley Documents/Helicopter Test and Evaluation{\_}2002{\_}Cooke, A. K.pdf:pdf},
+isbn = {0632052473},
+keywords = {doi:10.1029/9,http://dx.doi.org/10.1029/96GL03369},
+number = {24},
+title = {{Helicopter Test and Evaluation}},
+volume = {23},
+year = {2002}
+}
