Previous to presentation to Dominic

--- a/SH09_s_id/knowledge/main.tex
+++ b/SH09_s_id/knowledge/main.tex
@@ -8,7 +8,8 @@
 %Define which chapters to include
 \includeonly{
 	sections/Introduction,
-	sections/Model_description
+	sections/Model_description,
+	sections/TheoryOfHelicopters
 	} %{file1,file2,...} 
 
 %%%%%%%%%%%%%%%%%
@@ -31,6 +32,9 @@
 
 \clearpage
 \include{sections/Model_description}
+
+\clearpage
+\include{sections/TheoryOfHelicopters}
 
 % Bibliography
 \bibliographystyle{ieeetr}
