--- a/SH09_s_id/knowledge/sections/TheoryOfHelicopters.tex
+++ b/SH09_s_id/knowledge/sections/TheoryOfHelicopters.tex
@@ -47,7 +47,7 @@
   \end{eqnarray}
 
   \noindent %damped natural frequency is written like w_d in the control systems Cranfield notes
-  The blade natural damped natural frequency $\lambda_\beta$ is given by:$$\lambda_\beta = \sqrt{  1 + \frac{3}{2(1 - e/R)}\frac{e}{R} + 3 \frac{k_\beta}{R^3 m_P \Omega^2} \frac{1}{(1 - e/R)^3} }$$ 
+  The blade natural damped natural frequency $\lambda_\beta$ is given by:$$\lambda_\beta = \sqrt{  1 + \frac{3}{2(1 - e/R)}\frac{e}{R} + 3 \frac{k_\beta}{R^3 m_P \Omega^2} \frac{1}{(1 - e/R)^3} }.$$ 
   
   \noindent
   The feathering control law is given by: $$ \theta(\phi) = \theta_0 + \theta_{1C}\cos{\phi} + \theta_{1S}\sin{\phi}$$
