--- a/knowledge/settings/doc_settings.tex
+++ b/knowledge/settings/doc_settings.tex
@@ -15,6 +15,8 @@
 % Page dimensions
 \usepackage[a4paper,inner=2.2cm,outer=2.2cm,bottom=2.2cm,headheight=0.5cm]{geometry} % to change the page dimensions
 
+\setlength{\parskip}{10pt} 
+
 
 %Nomenclature settings
 \usepackage{nomencl}
