--- a/knowledge/settings/doc_settings.tex
+++ b/knowledge/settings/doc_settings.tex
@@ -13,9 +13,10 @@
 \usepackage{hyperref}
 
 % Page dimensions
-\usepackage[a4paper,inner=2.2cm,outer=2.2cm,bottom=2.2cm,headheight=0.5cm]{geometry} % to change the page dimensions
+\usepackage[a4paper,inner=2.2cm,outer=2.2cm,bottom=2.2cm,headheight=2cm]{geometry} % to change the page dimensions
 
-\setlength{\parskip}{10pt} 
+\setlength{\parskip}{1em} % Spacing between paragraphs
+\setlength{\headsep}{5pt} % Spacing between paragraphs
 
 
 %Nomenclature settings
